# mdocs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
mdocs/: cli.py  compiler.py  watcher.py
mdocs/templates/: breakable.typ
tests/: test_compiler.py
